# Omnis

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cliff.toml  flake.nix  omnis.yaml.example  package.nix  pyproject.toml
.github/workflows/: ci.yml  release.yml
claudedocs/: translation_encoding_fix_report.md
config/examples/: archlinux.yaml  glfos.yaml  minimal.yaml
config/i18n/: de_DE.conf  en_US.conf  es_ES.conf  fr_FR.conf  it_IT.conf  ja_JP.conf  ko_KR.conf  pt_BR.conf  ru_RU.conf  zh_CN.conf
config/themes/glfos/: theme.yaml
config/themes/glfos/fonts/: README.md
docs/: etude-packaging-standalone.md  gpu-compatibility.md  proxy-entreprise.md  roadmap.md  suivi-tests-iso-0.6.0.md  testing.md  translations.md
docs/architecture/: ipc.md  overview.md
docs/branding/: theming.md
docs/deployment/: polkit.md
docs/i18n/: RELECTURE.md
scripts/: build-and-test-appimage.sh  compile_translations.sh  fill_translations.py  fix_translation_encoding.py  generate_translations.py
src/omnis/: __init__.py  launcher.py  main.py
src/omnis/core/: __init__.py  engine.py
src/omnis/gui/: __init__.py  bridge.py  translator_proxy.py
src/omnis/gui/qml/: Main.qml  qmlproject.qmlproject
src/omnis/gui/translations/: omnis_ar_EG.ts  omnis_ar_SA.ts  omnis_bg_BG.ts  omnis_ca_ES.ts  omnis_cs_CZ.ts  omnis_da_DK.ts  omnis_de_DE.qm  omnis_de_DE.ts  omnis_el_GR.ts  omnis_en_GB.ts  omnis_en_US.qm  omnis_en_US.ts  omnis_es_ES.qm  omnis_es_ES.ts  omnis_eu_ES.ts  omnis_fi_FI.ts  omnis_fr_FR.qm  omnis_fr_FR.ts  omnis_gl_ES.ts  omnis_he_IL.ts  omnis_hi_IN.ts  omnis_hu_HU.ts  omnis_id_ID.ts  omnis_it_IT.qm  omnis_it_IT.ts  omnis_ja_JP.qm  omnis_ja_JP.ts  omnis_ko_KR.qm  omnis_ko_KR.ts  omnis_nb_NO.ts  omnis_nl_NL.ts  omnis_pl_PL.ts  omnis_pt_BR.qm  omnis_pt_BR.ts  omnis_pt_PT.ts  omnis_ro_RO.ts  omnis_ru_RU.qm  omnis_ru_RU.ts  omnis_sk_SK.ts  (+8 more)
src/omnis/i18n/: __init__.py  translator.py
src/omnis/ipc/: __init__.py  client.py  dispatcher.py  exceptions.py  protocol.py  security.py  server.py  transport.py
src/omnis/jobs/: __init__.py  base.py  bootloader.py  finished.py  gpu.py  gpu_config.py  install.py  locale.py  nixos.py  packages.py  partition.py  requirements.py  users.py  welcome.py
src/omnis/utils/: __init__.py  disk_detector.py  disk_release.py  keyboard_layout.py  locale_detector.py  log_capture.py  network_helper.py  session.py
tests/integration/: test_environment_view.py  test_locale_view.py  test_summary_view.py  test_users_flow.py
tests/unit/: test_auto_layout_plan.py  test_bootloader_job.py  test_bridge_keyboard.py  test_bridge_logs.py  test_bridge_partition_ops.py  test_disk_detector.py  test_disk_release.py  test_engine.py  test_finished_job.py  test_gpu_config.py  test_gpu_models.py  test_install_job.py  test_ipc.py  test_job_loader.py  test_jobs.py  test_keyboard_layout.py  test_locale_detector.py  test_locale_job.py  test_log_capture.py  test_main_appimage.py  test_network_helper.py  test_nixos_job.py  test_packages_job.py  test_partition_job.py  test_partition_operations.py  test_requirements_disk.py  test_security.py  test_theme_consistency.py  test_translations.py  test_users_job.py  test_users_validation.py
(+12 files in other folders)
